--- a/package.json
+++ b/package.json
@@ -9,15 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.14.2",
+    "@clerk/nextjs": "^5.2.12",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@types/node": "22.1.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
-    "next": "14.2.3",
-    "postcss": "8.4.38",
+    "autoprefixer": "10.4.20",
+    "axios": "^1.7.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.424.0",
+    "next": "14.2.5",
+    "postcss": "8.4.40",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.4",
-    "typescript": "5.4.5"
+    "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "3.4.7",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.5.4",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
